# use_opensource_rpclib

./: CMakeLists.txt  DownloadRpc_build_make.sh  DownloadRpc_build_ninja.sh  README.md  build.sh
src/: client_test.cpp  self_defined_data.h  server_test.cpp
